--- a/latihan_html_2.html
+++ b/latihan_html_2.html
@@ -7,7 +7,7 @@
         <meta charset="viewport" content="width=device-width,initial-scale=1">
     </head>
     <body>
-        <form action="/action_page.php">
+        <form action="/action_page.php" method="get" target="_self">
             <label for="depan">Nama Depan:</label><br>
             <label for="text" id="depan" name="i_name" value="agnes"><br>
             <label for="n_nama belakang">Nama Belakang:</label><br>
