--- a/latihan_html_2.html
+++ b/latihan_html_2.html
@@ -9,7 +9,7 @@
     <body>
         <form action="/action_page.php" method="get" target="_self">
             <label for="depan">Nama Depan:</label><br>
-            <label for="text" id="depan" name="i_name" value="agnes"><br>
+            <label for="text" id="depan" name="i_name" value="agnes"><br><br>
             <label for="n_nama belakang">Nama Belakang:</label><br>
             <input type="text" id="n_belakang" name="i_belakang" value="adelia"><br><br>
             <input type="submit" value="Kirim">
@@ -19,6 +19,6 @@
         <p>jika mengeklik tombol"Kirim",data formulir akan dikirim ke halaman bernama"/action_page.php"</p>
 
         <!--kesimpulan-->
-        <p>Form HTML sederhana dengan input nama depan dan belakang yang dapat diisi, dengan aksi mengirim data ke halaman "/action_page.php" saat tombol "Kirim" ditekan.</p>
+        <p>jika mengeklik tombol "Kirim", data formulir akan dikirim ke halaman bernama "/action_page.php" dengan metode "GET" dan akan dibuka di tab yang sama (_self)</p>
     </body>
 </html>
