--- a/latihan_html_2.html
+++ b/latihan_html_2.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="img/png" href="gambar/icon.png" sizes="16x16"/>
     <meta charset="viewport" content="width=device-width,initial-scale=1">
 </head>
-<body>
+<body style="background-color: blueviolet;">
     <form action="/action_page.php" method="get" target="_self">
         <label for="depan">Nama Depan:</label><br>
         <input type="text" id="depan" name="i_name" value="agnes"><br><br>
@@ -15,6 +15,8 @@
         <input type="submit" value="Kirim">
         <input type="reset" value="Reset">
     </form>
-    <p>jika mengeklik tombol "Kirim", data formulir akan dikirim ke halaman bernama "/action_page.php" dengan metode "GET" dan akan dibuka di tab yang sama (_self)</p>
+    <p>jika mengeklik tombol"Kirim",data formulir akan dikirim ke halaman bernama"/action_page.php"</p>
+
+     <p>jika mengeklik tombol "Kirim", data formulir akan dikirim ke halaman bernama "/action_page.php" dengan metode "GET" dan akan dibuka di tab yang sama (_self)</p>
 </body>
 </html>
