--- a/latihan_html_4.html
+++ b/latihan_html_4.html
@@ -10,19 +10,19 @@
     <body>
 
         <div id="header">
-            <h1>Judul/Header Website</h1>
+            <h1>Cerita Hidupku</h1>
         </div>
 
         <div>
             <ul>
-                <li><a href="#">London</a></li>
-                <li><a href="#">Paris</a></li>
-                <li><a href="#">Tokyo</a></li>
+                <li><a href="#">senang</a></li>
+                <li><a href="#">sedih</a></li>
+                <li><a href="#">Tawa</a></li>
             </ul>
         </div>
 
         <div id="content">
-            <p>nama saya<b>agnes adelia putri</b>nim<b>233307031</b>saya gemar membaca buku dan menonton film</p>
+            <p>nama saya <b>agnes adelia putri </b>nim<b>233307031</b> saya gemar membaca buku dan menonton film.setiap hari saja belajar banyak pengalaman dikampus politeknik negeri madiun</p>
         </div>
 
         <div id="footer">
