--- a/latihan_html_1.html
+++ b/latihan_html_1.html
@@ -6,7 +6,7 @@
         <link rel="icon" type="img/png" href="gambar/icon.pngn" size="16x16"/>
         <meta name="viewport" content="width=device.width, initial-scale=1">  
     </head>
-    <body>
+    <body style="background-color: goldenrod;">
     <label for="username"> type "text" :</label> <br>
     <input type="text" id="username" name="username"> <br>
     <label for="pwd"> type "password"</label> <br>
@@ -18,7 +18,8 @@
     <input type="radio" id="html" value="HTML"> <label for="html">HTML</label> <br>
     <input type="radio" id="css" value="CSS"> <label for="css">CSS</label> <br>
     <input type="radio" id="javascript" value="JavaScript"> <label for="javascript">JavaScript</label> <br>
-    <p> Kesimpulan: </p>
+    <p> Kesimpulan:elemen input radio digunakan untuk memberikan pilihan eksklusif di mana pengguna hanya dapat memilih satu opsi dari beberapa opsi yang disediakan. Dengan menggunakan radio button, pengguna dapat memilih satu opsi yang paling sesuai dengan keinginan mereka.<hr>
+        
 
     <hr>
     <h3>Uji coba 3</h3>
@@ -28,7 +29,7 @@
     <label for="id2"> i have a car</label> <br>
     <input type="checkbox" id="id3" value="Boat">
     <label for="id3"> i have a boat/label> <br>
-    <p>Kesimpulan:</p>
+    <p>Kesimpulan:elemen input checkbox digunakan untuk memberikan opsi pilihan kepada pengguna di mana mereka dapat memilih beberapa opsi sekaligus. Dengan menggunakan checkbox, pengguna dapat memilih satu atau lebih opsi ya</p>
 
     <hr>
     <h4>Uji coba 4</h4>
@@ -37,7 +38,7 @@
     <label for="b">Pilih tanggal dengan type="date":</label>
     <input type="date" id="d" name="tanggal"> <br>
     <input type="button" onclick="alert('Hello World')" value="Click Me!"> <br>
-    <p> Kesimpulan</p>
+    <p> Kesimpulan:HTML digunakan untuk struktur halaman web, CSS untuk gaya visual, dan JavaScript untuk interaktivitas. Dengan menggabungkan ketiganya, Anda dapat membuat halaman web yang interaktif dan menarik bagi pengguna.</p>
 
     <hr>
     <h3> Uji coba 5</h3>
@@ -47,7 +48,7 @@
     <input type="month" id="bdaymonth" name="bdaymonth"> <br>
     <label for="email">Enter your email:</label>
     <input type="email" id="email" name="email"><br>
-    <p> Kesimpulan</p>
+    <p> Kesimpulan:nput dengan tipe datetime-local digunakan untuk memasukkan tanggal dan waktu, sedangkan input dengan tipe month digunakan untuk memilih bulan. Input dengan tipe email digunakan untuk memasukkan alamat email pengguna.</p>
 
     <hr>
     <h3>Uji coba 6</h3>
@@ -55,7 +56,7 @@
     <label for="myfile">Pilih file</label>
     <input type="file" id="myfile" name="myfile"><br>
     <input type="hidden" id="cusId" name="cusId" value="3487"><br>
-    <p>Kesimpulan</p>
+    <p>Kesimpulan: elemen-elemen input berperan dalam menerima masukan dari pengguna. Elemen image memungkinkan tombol submit berupa gambar, file digunakan untuk memilih file, dan hidden untuk menyimpan nilai secara tersembunyi.</p>
 
     <hr>
     <h3>Uji coba 7</h3>
@@ -63,7 +64,7 @@
     <input tyope="number" id="quantity" min="-50" max="10"><br>
     <label for="vol">Volume (between 0 and 50):</label>
     <input type="range" id="vol" name="vol" min="0" max="50"><br>
-    <p>Kesimpulan</p>
+    <p>Kesimpulan:elemen input number digunakan untuk memasukkan angka dengan batasan tertentu, sedangkan input range digunakan untuk memilih nilai dalam rentang yang telah ditentukan. Dengan kedua elemen ini, pengguna dapat memasukkan atau memilih nilai sesuai dengan batasan yang telah ditetapkan.</p>
 
     <hr>
     <h3>Uji coba 8</h3>
@@ -73,7 +74,7 @@
     <input type="search" id="gsearch" name="gsearch"><br>
     <label for="ph">Enter your phone number</label>
     <input type="tel" id="ph" nem="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"><br>
-    <p>Kesimpulan</p>
+    <p>Kesimpulan:elemen input url digunakan untuk memasukkan alamat URL, search untuk melakukan pencarian, dan tel untuk memasukkan nomor telepon dengan format tertentu. Dengan menggunakan input ini, pengguna dapat memasukkan informasi sesuai dengan tipe data yang diharapkan.</p>
 
     <hr>
     <h3>Uji coba 9</h3>
@@ -81,6 +82,6 @@
     <input type="time" id="appt" name="appt"><br>
     <label for="week">Select a week:</label>
     <input type="week" id="week" name="week"><br>
-    <p>Kesimpulan</p>
+    <p>Kesimpulan:elemen input time digunakan untuk memilih waktu, sedangkan input week digunakan untuk memilih minggu dalam tahun. Dengan menggunakan input ini, pengguna dapat memilih waktu atau minggu dengan mudah sesuai dengan kebutuhan aplikasi.</p>
 </body>
 </html>
