--- a/latihan_html_10.html
+++ b/latihan_html_10.html
@@ -1,7 +1,42 @@
-<img src="gambar/workplace.jpg" alt="workplace" usemap="#petagambar">
+
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+    <title>Div dan Span</title>
+    <link rel="icon" type="img/png" href="gambar/icon.png" sizes="16x16" />
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="css/main.css">
+    </head>
+    <body style="background-color: dodgerblue;">
+
+        <div id="header">
+            <h1>belajar html</h1>
+        </div>
+
+        <div>
+            <ul>
+                <li><a href="senang">semangat</a></li>
+                <li><a href="bahagia">semangat</a></li>
+                <li><a href="happy">semangat</a></li>
+            </ul>
+        </div>
+
+        <div id="content">
+            <img src="gambar/workplace.jpg" alt="workplace" usemap="#petagambar">
 
 <map name="petagambar">
     <area shape="rect" coords="34,44,278,350" alt="computer" href="https://en.wikipedia.org/wiki/computer">
     <area shape="rect" coords="290,172,333,250" alt="phone" href="https://en.wikipedia.org/wiki/Telephone">
     <area shape="circle" coords="337,300,44" alt="coffee" href="https://en.wikipedia.org/wiki/coffee">
 </map>
+        </div>
+
+        <div id="footer">
+                <i>copyright@agnes adelia putri_233307031_2023</i>
+            </div>
+    </body>
+</html>
+
+
+
