--- a/latihan_html_4.html
+++ b/latihan_html_4.html
@@ -7,22 +7,22 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="css/main.css">
     </head>
-    <body>
+    <body style="background-color: blueviolet;">
 
         <div id="header">
-            <h1>Cerita Hidupku</h1>
+            <h1>belajar html</h1>
         </div>
 
         <div>
             <ul>
-                <li><a href="#">senang</a></li>
-                <li><a href="#">sedih</a></li>
-                <li><a href="#">Tawa</a></li>
+                <li><a href="senang">semangat</a></li>
+                <li><a href="bahagia">semangat</a></li>
+                <li><a href="happy">semangat</a></li>
             </ul>
         </div>
 
         <div id="content">
-            <p>nama saya <b>agnes adelia putri </b>nim<b>233307031</b> saya gemar membaca buku dan menonton film.setiap hari saja belajar banyak pengalaman dikampus politeknik negeri madiun</p>
+            <p>nama saya <b>agnes adelia putri </b>nim <b>233307031</b> saya gemar membaca buku dan menonton film.setiap hari saja belajar banyak pengalaman dikampus politeknik negeri madiun</p>
         </div>
 
         <div id="footer">
