--- a/latihan_html_9.html
+++ b/latihan_html_9.html
@@ -1,4 +1,29 @@
-<p><a href="#C4">jump to chapter 4</a></p>
+
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+    <title>Div dan Span</title>
+    <link rel="icon" type="img/png" href="gambar/icon.png" sizes="16x16" />
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="css/main.css">
+    </head>
+    <body style="background-color: coral;">
+
+        <div id="header">
+            <h1>belajar html</h1>
+        </div>
+
+        <div>
+            <ul>
+                <li><a href="senang">semangat</a></li>
+                <li><a href="bahagia">semangat</a></li>
+                <li><a href="happy">semangat</a></li>
+            </ul>
+        </div>
+
+        <div id="content">
+            <p><a href="#C4">jump to chapter 4</a></p>
 <p><a href="#C10">jump to chapter 10</a></p>
 <p><a href="#C20">jump to chapter 20</a></p>
 
@@ -14,4 +39,13 @@
 <h2>chapter 4</h2>
 <p>this capter explans  </p>
 <p>teks tersebut berisi tautan untuk melompat ke bab-bab tertentu dalam suatu dokumen atau karya tulis. Tautan tersebut mengarahkan pembaca untuk langsung menuju ke bagian yang ditandai sebagai Bab 4, Bab 10, dan Bab 20. Ini memberikan kemudahan navigasi bagi pembaca untuk mencari informasi tertentu dalam teks yang lebih besar.</p>
+
+        </div>
+
+        <div id="footer">
+                <i>copyright@agnes adelia putri_233307031_2023</i>
+            </div>
+    </body>
+</html>
+
 
