--- a/latihan_html_7.html
+++ b/latihan_html_7.html
@@ -1,6 +1,29 @@
-<h1 style="background-color: powderblue;">background-colour:powderblue</h1>
-<p style="background-color: tomato;">background-color tomato</p>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+    <title>Div dan Span</title>
+    <link rel="icon" type="img/png" href="gambar/icon.png" sizes="16x16" />
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="css/main.css">
+    </head>
+    <body style="background-color: goldenrod;">
 
+        <div id="header">
+            <h1>belajar html</h1>
+        </div>
+
+        <div>
+            <ul>
+                <li><a href="senang">semangat</a></li>
+                <li><a href="bahagia">semangat</a></li>
+                <li><a href="happy">semangat</a></li>
+            </ul>
+        </div>
+
+        <div id="content">
+            <h1 style="background-color: powderblue;">background-colour:powderblue</h1>
+            <p style="background-color: tomato;">background-color tomato</p>
 <!--style warna objek-->
 <h1 style="color: blue;">color:blue</h1>
 <p style="color:red;">color:red</p>
@@ -16,3 +39,9 @@
 <!--style posis objek-->
 <h1 style="text-align: center;">Heading dengan teks tengah</h1>
 <p style="text-align: center;">Paragraf dengan posisi tengah</p>
+        </div>
+        <div id="footer">
+                <i>copyright@agnes adelia putri_233307031_2023</i>
+            </div>
+    </body>
+</html>
