--- a/html_advance/event.html
+++ b/html_advance/event.html
@@ -61,6 +61,10 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
+
+
+
+                
                 <li><a href="gambar.html">Gambar</a></li>
                 <li><a href="event.html">Event</a></li>
                 <li><a href="audio.html">Audio</a></li>
@@ -72,12 +76,12 @@
         </nav>
         <article>
             <h1>Gambar Pemandangan</h1>
-            <img src="gambar/gambar.jpg" alt="Deskripsi Gambar" width="200px" height="200px" onmouseover="gambar1()" onmouseout="normal1()">
-            <img src="gambar/gambar2.jpg" alt="Deskripsi Gambar" width="200px" height="200px" onmouseover="gambar2()" onmouseout="normal2()">
-            <img src="gambar/gambar4.jpg" alt="Deskripsi Gambar" width="200px" height="200px" onmouseover="gambar3()" onmouseout="normal3()">
-            <img src="gambar/gambar5.jpg" alt="Deskripsi Gambar" width="200px" height="200px" onmouseover="gambar4()" onmouseout="normal4()">
-            <img src="gambar/gambar6.jpg" alt="Deskripsi Gambar" width="200px" height="200px" onmouseover="gambar5()" onmouseout="normal5()">
-            <img src="gambar/gambar1.jpg" alt="Deskripsi Gambar" width="200px" height="200px" onmouseover="gambar6()" onmouseout="normal6()">
+            <img id="gambar1" src="gambar/gambar.jpg" alt="Deskripsi Gambar" width="200px" height="200px" onmouseover="gambar1()" onmouseout="normal1()">
+            <img id="gambar2" src="gambar/gambar2.jpg" alt="Deskripsi Gambar" width="200px" height="200px" onmouseover="gambar2()" onmouseout="normal2()">
+            <img id="gambar3" onsrc="gambar/gambar4.jpg" alt="Deskripsi Gambar" width="200px" height="200px" onmouseover="gambar3()" onmouseout="normal3()">
+            <img id="gambar4"src="gambar/gambar5.jpg" alt="Deskripsi Gambar" width="200px" height="200px" onmouseover="gambar4()" onmouseout="normal4()">
+            <img id="gambar5"src="gambar/gambar6.jpg" alt="Deskripsi Gambar" width="200px" height="200px" onmouseover="gambar5()" onmouseout="normal5()">
+            <img id="gambar6"src="gambar/gambar1.jpg" alt="Deskripsi Gambar" width="200px" height="200px" onmouseover="gambar6()" onmouseout="normal6()">
         </article>
         <div class="kotak-hijau"></div>
         <div class="kotak-merah"></div>
@@ -89,7 +93,7 @@
     </footer>
     <script>
         function gambar1() {
-            document.getElementById("gambar1").src = "gambar/gambar3.jpg";
+            document.getElementById("gambar1").src = "gambar/gambar4.jpg";
         }
         function normal1() {
             document.getElementById("gambar1").src = "gambar/gambar.jpg";
