--- a/pesudo.html
+++ b/pesudo.html
@@ -1,20 +1,18 @@
+<style>
+    p {
+        display: none;
+        background-color:aqua;
+        padding: 20px;
+    }
 
-    <style>
-        p {
-            display: none;
-            background-color: darkgray;
-            padding: 20px;
-        }
-
-        div:hover p { /* hover is a CSS pseudo-class */
-            display: block;
-        }
-    </style>
+    div:hover p { /* hover is a CSS pseudo-class */
+        display: block;
+    }
+</style>
 <body>
 
-    <div>Letakkan kursor disini untuk melihat div ::-webkit-progress-inner-element
-        <p>Saya adalah elemen </p>
-   </div>
+<div>Letakkan kursor disini untuk melihat div ::-webkit-progress-inner-element
+    <p>Saya adalah elemen </p>
+</div>
 
 </body>
-
