--- a/pesudo.html
+++ b/pesudo.html
@@ -13,6 +13,8 @@
 
 <div>Letakkan kursor disini untuk melihat div ::-webkit-progress-inner-element
     <p>Saya adalah elemen </p>
+
+    <a href="#">Link Saya</a>
 </div>
 
 </body>
