--- a/home.html
+++ b/home.html
@@ -4,45 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Halaman Depan</title>
-    <style>
-        /* Style CSS untuk tata letak dan desain */
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color:#D3BBDD; /* Warna latar belakang */
-            text-align: center;
-        }
-        .container {
-            width: 80%;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: grey; /* Warna latar belakang kontainer */
-            border-radius: 10px;
-            box-shadow: 0 0 30px rgba(0, 0, 0, 0.1); /* Efek bayangan */
-        }
-        .container h1 {
-            margin-top: 0;
-            color: #000000; /* Warna teks */
-        }
-        .container a {
-            margin-right: 20px; /* Menambahkan margin kanan untuk tautan */
-            text-decoration: none;
-            color: #666666; /* Warna teks tautan */
-            transition: color 0.3s; /* Efek transisi */
-        }
-        .container a:hover {
-            color: #000000; /* Warna teks tautan saat dihover */
-        }
-        nav {
-            padding: 20px 0;
-            background-color:#D3BBDD; /* Warna latar belakang */
-        }
-        nav img {
-            max-width: 60%; /* Lebar gambar maksimum */
-            height: auto;
-        }
-    </style>
+    <link rel="stylesheet" href="home.css">
 </head>
 <body>
     <nav>
