--- a/jadwalperkuliahan.html
+++ b/jadwalperkuliahan.html
@@ -4,29 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jadwal Perkuliahan</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 20px;
-            text-align: center;
-            background-color: #D3BBDD;
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-bottom: 20px;
-        }
-        th, td {
-            border: 1px solid #000000;
-            padding: 8px;
-            text-align: left;
-        }
-        th {
-            background-color:rgb(11, 161, 248); 
-        }
-    </style>
+    <link rel="stylesheet" href="jadwalperkuliahan.css">
 </head>
 <body>
     <h1>Jadwal Perkuliahan</h1>
