--- a/Hobbi.html
+++ b/Hobbi.html
@@ -16,12 +16,12 @@
     </header>
     <section>
         <nav>
-            <img src="gambar/gambaruts/Kid_Reading_A_Book_Clipart_Hd_PNG__Muslim_Girl_Reading_A_Book__Read__Book__Muslim_PNG_Image_For_Free_Download-removebg-preview.png">
+            <img src="gambar/gambaruts/13.png">
         </nav>
         
 
         <article>
-            <p><h1><b>Selamat datang di halaman tentang hobi saya, yaitu membaca. Membaca adalah kegiatan yang saya lakukan untuk mengisi waktu luang dan memperluas pengetahuan serta imajinasi.</b></h1></p>
+            <p><h1>Selamat datang di halaman tentang hobi saya, yaitu membaca. Membaca adalah kegiatan yang saya lakukan untuk mengisi waktu luang dan memperluas pengetahuan serta imajinasi.</h1></p>
         
             <h2>Kenapa Saya Suka Membaca?</h2>
             <p>Saya suka membaca karena membaca memungkinkan saya untuk menjelajahi dunia tanpa harus meninggalkan tempat duduk saya. Setiap buku membawa saya ke tempat baru, baik itu di dunia nyata, di alam khayal, atau dalam sudut pandang orang lain.</p>
