--- a/home.html
+++ b/home.html
@@ -7,11 +7,7 @@
     <link rel="stylesheet" href="home.css">
 </head>
 <body>
-    <nav>
-        <img src="gambar/gambaruts/Cat_With_Hijabi_Girl__-removebg-preview.png" alt="Header Image">
-    </nav>
     <div class="container">
-        <h1>Selamat Datang di Website Saya</h1>
         <a href="home.html">Home</a> 
         <a href="profil.html">Profil</a> 
         <a href="tentangsaya.html">Tentang Saya</a> 
@@ -19,5 +15,13 @@
         <a href="Hobbi.html">Hobbi</a> 
         <a href="Halamanpendaftaran.html">Pendaftaran</a>
     </div>
+    <nav>
+        <h1>Selamat Datang di Website Saya</h1>
+        <img src="gambar/gambaruts/Decorative_Horizontal_Lines_PNG_Image__Star_Horizontal_Line_Decoration_Elements__Line__Horizontal_Line__Horizontal_PNG_Image_For_Free_Download-removebg-preview (1).png">
+    </nav>
+    
+    <nav class="kartun">
+        <img src="gambar/gambaruts/11.png" alt="Header Image">
+    </nav>
 </body>
 </html>
