--- a/profil.html
+++ b/profil.html
@@ -15,15 +15,44 @@
             <img src="gambar/gambaruts/buat_uts-removebg-preview.png">
         </nav>
         <article>
-            <p>Nama : Agnes Adelia Putri</p>
-            <p>Tempat/Tanggal Lahir :Trenggalek, 21 Mei 2004</p>
-            <p>Nim : 233307031</p>
-            <p>Prodi : Tekonologi Informasi</p>
-            <p>Alamat : Ds. Pakel Kec. Watulimo Kab. Trenggalek</p>
-            <p>Umur : 19 Tahun</p>
-            <p>Email : agnesadelia86@gmail.com</p>
-            <p>Telepon : 082142148183</p>
-            <p>Hobbi : Membaca </p>
+            <table>
+                <tr>
+                    <td>Nama</td>
+                    <td>: Agnes Adelia Putri</td>
+                </tr>
+                <tr>
+                    <td>Tempat/Tanggal Lahir</td>
+                    <td>: Trenggalek, 21 Mei 2004</td>
+                </tr>
+                <tr>
+                    <td>Nim</td>
+                    <td>: 233307031</td>
+                </tr>
+                <tr>
+                    <td>Prodi</td>
+                    <td>: Tekonologi Informasi</td>
+                </tr>
+                <tr>
+                    <td>Alamat</td>
+                    <td>: Ds. Pakel Kec. Watulimo Kab. Trenggalek</td>
+                </tr>
+                <tr>
+                    <td>Umur</td>
+                    <td>: 19 Tahun</td>
+                </tr>
+                <tr>
+                    <td>Email</td>
+                    <td>: agnesadelia86@gmail.com</td>
+                </tr>
+                <tr>
+                    <td>Telepon</td>
+                    <td>: 082142148183</td>
+                </tr>
+                <tr>
+                    <td>Hobbi</td>
+                    <td>: Membaca </td>
+                </tr>
+            </table>
         </article>
     </section>
     <footer>
