--- a/profil.html
+++ b/profil.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Halaman Beranda</title>
-    <link rel="stylesheet" href="profil.css">
+    <title>halaman beranda</title>
+    <link rel="stylesheet" href="css/profil.css">
 </head>
 <body>
     <header>
-        <h2>Profile</h2>
+        <h2>profile</h2>
     </header>
     <section>
         <nav>
-            <img src="gambar/gambaruts/buat_uts-removebg-preview.png">
+        <img src="gambaruts/Tulips__flowers-removebg-preview.png">
         </nav>
         <article>
             <table>
@@ -55,9 +55,5 @@
             </table>
         </article>
     </section>
-    <footer>
-        <p>Footer</p>
-        <p>agnesadelia86@gmail.com</p>
-    </footer>
 </body>
 </html>
