--- a/jadwalperkuliahan.html
+++ b/jadwalperkuliahan.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jadwal Perkuliahan</title>
-    <link rel="stylesheet" href="jadwalperkuliahan.css">
+    <link rel="stylesheet" href="css/jadwalperkuliahan.css">
 </head>
 <body>
     <h1>Jadwal Perkuliahan</h1>
